thêm thống kê tổng dữ lệu vào index

--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -79,20 +79,20 @@
 
             <!-- Nav Item - Charts -->
             <li class="nav-item">
-                <a class="nav-link" href="/tkds">
+                <a class="nav-link" href="tkds">
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>Thống kê doanh số</span></a>
             </li>
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
-                <a class="nav-link" href="qlkh.html">
+                <a class="nav-link" href="qlkh">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Quản lí khách hàng</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="qldh.html">
+                <a class="nav-link" href="qldh">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Quản lí đơn hàng</span>
                 </a>
