--- a/app/templates/tkds.html
+++ b/app/templates/tkds.html
@@ -86,13 +86,13 @@
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
-                <a class="nav-link" href="qlkh.html">
+                <a class="nav-link" href="qlkh">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Quản lí khách hàng</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="qldh.html">
+                <a class="nav-link" href="qldh">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Quản lí đơn hàng</span>
                 </a>
