--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -78,11 +78,11 @@
             </li> -->
 
             <!-- Nav Item - Charts -->
-            <li class="nav-item">
-                <a class="nav-link" href="tkds">
-                    <i class="fas fa-fw fa-chart-area"></i>
-                    <span>Thống kê doanh số</span></a>
-            </li>
+<!--            <li class="nav-item">-->
+<!--                <a class="nav-link" href="tkds">-->
+<!--                    <i class="fas fa-fw fa-chart-area"></i>-->
+<!--                    <span>Thống kê doanh số</span></a>-->
+<!--            </li>-->
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
