--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -86,19 +86,19 @@
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
-                <a class="nav-link" href="qlsp">
+                <a class="nav-link" href="/qlsp">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Quản lí sản phẩm</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="qlkh">
+                <a class="nav-link" href="/qlkh">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Quản lí khách hàng</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="qldh">
+                <a class="nav-link" href="/qldh">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Quản lí đơn hàng</span>
                 </a>
@@ -490,17 +490,6 @@
                                 <div class="card-body">
                                     <div class="chart-pie pt-4 pb-2">
                                         <canvas id="myPieChart"></canvas>
-                                    </div>
-                                    <div class="mt-4 text-center small">
-                                        <span class="mr-2">
-                                            <i class="fas fa-circle text-primary"></i> Direct
-                                        </span>
-                                        <span class="mr-2">
-                                            <i class="fas fa-circle text-success"></i> Social
-                                        </span>
-                                        <span class="mr-2">
-                                            <i class="fas fa-circle text-info"></i> Referral
-                                        </span>
                                     </div>
                                 </div>
                             </div>
