--- a/app/templates/qldh.html
+++ b/app/templates/qldh.html
@@ -34,7 +34,7 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/index">
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-laugh-wink"></i>
                 </div>
@@ -46,7 +46,7 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
-                <a class="nav-link" href="index">
+                <a class="nav-link" href="/index">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Trang chính</span></a>
             </li>
@@ -89,13 +89,19 @@
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
-                <a class="nav-link" href="qlkh">
+                <a class="nav-link" href="/qlsp">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>Quản lí sản phẩm</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/qlkh">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Quản lí khách hàng</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="qldh">
+                <a class="nav-link" href="/qldh">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Quản lí đơn hàng</span>
                 </a>
