--- a/app/templates/qlsp.html
+++ b/app/templates/qlsp.html
@@ -341,15 +341,13 @@
                 <div class="container-fluid">
 
                     <!-- Page Heading -->
-                    <h1 class="h3 mb-2 text-gray-800">Tables</h1>
-                    <p class="mb-4">DataTables is a third party plugin that is used to generate the demo table below.
-                        For more information about DataTables, please visit the <a target="_blank"
-                            href="https://datatables.net">official DataTables documentation</a>.</p>
+                    <h1 class="h3 mb-2 text-gray-800">Quản lý sản phẩm</h1>
+
 
                     <!-- DataTales Example -->
                     <div class="card shadow mb-4">
                         <div class="card-header py-3">
-                            <h6 class="m-0 font-weight-bold text-primary">DataTables Example</h6>
+                            <h6 class="m-0 font-weight-bold text-primary">Danh sách sản phẩm</h6>
                         </div>
                         <div class="card-body">
                             <div class="table-responsive">
@@ -385,9 +383,7 @@
                                             <a href="{{ url_for('suattsp', id=record.id) }}">
                                                 <button class="btn btn-danger">Sửa</button>
                                             </a>
-                                            <a href="xoasp">
-                                                <button class="btn btn-danger">Xóa</button>
-                                            </a></th>
+                                            </th>
                                         </tr>
                                     {% endfor %}
                                     </tbody>
